[tool.poetry]
name = "network-scanner"
version = "0.1.0"
description = ""
authors = ["Konstantin"]
readme = "README.md"
packages = [{include = "network_scanner", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
rich = "^13.9.0"
pydantic = "^2.10.0"
scapy = "^2.6.0"
mac-vendor-lookup = "^0.1.15"

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.0"
pytest = "^8.0.0"
pytest-asyncio = "0.25.0"
pre-commit = "^4.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
netscan = "network_scanner.cli:main"
